recursion.cons.lessons.recursion.cons.Min.scala.error
min:2: error: not found: type char
	def min2(l:List[Int], v:char): Char = {
                                ^